fix for missing case studies on mobile

--- a/assets/scss/pages/case-studies.scss
+++ b/assets/scss/pages/case-studies.scss
@@ -596,6 +596,9 @@
               grid-column: span 2 / span 2;
             }
           }
+          @media screen and (max-width: 640px) {
+            grid-column: span 2/span 2;
+          }
           a {
             position: absolute;
             inset: 0;
